<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">>
        <Button android:id="@id/refreshLayoutsButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/go"/>
        <android.widget.EditText
              android:id="@id/UrlEditText"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/defaultUrl" />
    </LinearLayout>
    <ListView android:id="@id/LayoutDownloaderListView"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>
    <TextView android:id="@id/LayoutDownloaderNoNewTextView"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/NoReuslt" />

</LinearLayout>